# CMakeList.txt: проект CMake для CMakeOGL; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.13)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (CMakeOGL "CMakeOGL.cpp" "CMakeOGL.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
